--- a/css-midterm/index.css
+++ b/css-midterm/index.css
@@ -10,12 +10,16 @@ body {
     align-items: center;
     flex-direction: column;
     width: fit-content;
+    max-width: 1000px;
+    padding-bottom: 100px;
 }
 
 .title-container {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
+
 }
 
 .name-container {
@@ -51,5 +55,74 @@ body {
     text-align: center;
     width: 100%;
     border-radius: 100px;
+    font-weight: 900;
+    padding-bottom: 5px;
+}
+
+.performances-container {
+    font-family: 'Playfair Display', serif;
+    margin-top: 100px;
+    text-align: center;
+}
+
+
+.performance-name {
     font-weight: bold;
+    font-size: 40px;
+    text-transform: uppercase;
+    padding-bottom: 20px;
+    text-align: left;
+}
+
+.performance-artists {
+    font-weight: bold;
+    font-size: 25px;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.performance-information {
+    font-family: 'Lora', serif;
+    display: flex;
+    margin-top: 20px;
+
+}
+
+.performance-date {
+    flex: .5;
+    display: flex;
+    font-weight: bold;
+    font-size: 35px;
+    margin-right: 20px;
+    justify-content: center;
+    align-items: center;
+    border: solid black 5px;
+    padding: 50px;
+}
+
+.performance-description {
+    flex: 1;
+    margin-left: 20px;
+    text-align: left;
+}
+
+.performance-repertoire {
+    font-family: 'Lora', serif;
+    margin-top: 20px;
+    text-align: left;
+    font-size: 20px;
+}
+
+.performance-divider {
+    margin-top: 75px;
+    margin-bottom: 75px;
+    border-top: 15px dotted black;
+}
+
+.repertoire-info {
+    margin: 3px;
+}
+
+.first-performance {
+    position: relative;
 }
