--- a/wa/wa12/wa12.css
+++ b/wa/wa12/wa12.css
@@ -11,10 +11,13 @@ html {
   }
   
   body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-    background-color: #c9bd95;
-  }
-  
+    font-family: 'Playfair Display', serif;
+    background-color: #FFFAFD;
+    display: flex;
+    justify-content: center;
+
+}
+
   .app {
     position: absolute;
     top: 50%;
@@ -23,7 +26,7 @@ html {
     width: 600px;
     background-color: white;
     border-radius: 5px;
-    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
+    box-shadow: 0 10px 30px rgba(255, 182, 193, 0.5);
   }
   
   header {
@@ -35,6 +38,7 @@ html {
   }
   
   .quotes {
+    font-family: 'Lora', serif;
     padding: 20px 50px;
     min-height: 200px;
   }
@@ -60,29 +64,20 @@ html {
     text-align: center;
     width: 100%;
     font-size: 20px;
-    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
-  }
-  
-  .twitter {
-    background-color: #1da1f2;
-    text-decoration: none;
-  }
-  
-  .twitter:hover {
-    background-color: #1e7fbb;
+    box-shadow: 0 10px 30px rgba(255, 182, 193, 0.5);
   }
   
   .new-quote {
-    background-color: #4A2B0F;
+    background-color: #c489a6;
     margin-bottom: 15px;
   }
   
   .new-quote:hover {
-    background-color: #6d3b0e;
+    background-color: #CCC8CA;
   }
   
   .new-quote:disabled {
-    background-color: #cccccc;
+    background-color: #9e6464;
     color: #666666;
     cursor: not-allowed;
   }
@@ -94,4 +89,9 @@ html {
     .quote-text {
       font-size: 18px;
     }
+  }
+
+  img {
+    width: 50%;
+    height: 50%;
   }
